kube/envoy.yaml
static_resources:
  listeners:
  - name: listener_https
    address:
      socket_address: { address: 0.0.0.0, port_value: 443 }
    filter_chains:
    - filter_chain_match:
        server_names: ["deploy-app.com"]
      tls_context:
        common_tls_context:
          tls_certificates:
          - certificate_chain:
              filename: "/etc/certs/tls.crt"
            private_key:
              filename: "/etc/certs/tls.key"
      filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_https
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains: ["deploy-app.com"]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: hello_world_service
          http_filters:
          - name: envoy.filters.http.router

  clusters:
  - name: hello_world_service
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: hello_world_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: hello-world.loco-setup.svc.cluster.local
                port_value: 5678
