kube/envoy_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
  namespace: loco-setup
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
      - name: envoy
        image: envoyproxy/envoy:v1.33-latest
        args: ["-c", "/etc/envoy/envoy.yaml"]
        ports:
          - containerPort: 80
          - containerPort: 443
          - containerPort: 9901 # Admin
        volumeMounts:
        - name: envoy-config
          mountPath: /etc/envoy
        - name: tls-secret
          mountPath: /etc/certs
          readOnly: true
      volumes:
      - name: envoy-config
        configMap:
          name: envoy-config
      - name: tls-secret
        secret:
          secretName: loco-tls
---
apiVersion: v1
kind: Service
metadata:
  name: envoy
  namespace: loco-setup
spec:
  selector:
    app: envoy
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
    - name: admin
      port: 9901
      targetPort: 9901
  type: LoadBalancer
