kube/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
  namespace: loco-setup
spec:
  infrastructure:
    annotations:
      service.beta.kubernetes.io/do-loadbalancer-type: "REGIONAL_NETWORK"
  gatewayClassName: eg
  listeners:
  - name: https
    hostname: "*.deploy-app.com"
    protocol: HTTPS
    port: 443
    allowedRoutes:
        namespaces:
          from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: loco-tls
        kind: Secret
        group: ""
  - name: http
    hostname: "*.deploy-app.com"
    protocol: HTTP
    port: 80
    allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: ClientTrafficPolicy
metadata:
  name: enable-http3
  namespace: loco-setup
spec:
  http3: {}
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
---
# apiVersion: gateway.envoyproxy.io/v1alpha1
# kind: EnvoyPatchPolicy
# metadata:
#   name: include-envoy-headers
#   namespace: loco-setup
# spec:
#   targetRef:
#     group: gateway.networking.k8s.io
#     kind: Gateway
#     name: eg
#   type: JSONPatch
#   jsonPatches:
#   - type: "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
#     name: header-patch
#     operation:
#       op: replace
#       path: /typedPerFilterConfig/envoy.filters.http.router
#       value:
#         suppress_envoy_headers: false
