kube/gateway_route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: loco-api
    namespace: loco-setup
spec:
    parentRefs:
        - name: eg
    hostnames:
        - "loco.deploy-app.com"
    rules:
        - backendRefs:
              - group: ""
                kind: Service
                name: loco-api
                port: 80
                weight: 1
          matches:
              - path:
                    type: PathPrefix
                    value: /
