kube/monitoring_route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: grafana
    namespace: monitoring
spec:
    parentRefs:
        - name: eg
          namespace: loco-system
    hostnames:
        - "loco-monitoring.deploy-app.com"
    rules:
        - backendRefs:
              - group: ""
                kind: Service
                name: grafana
                port: 80
                weight: 1
          matches:
              - path:
                    type: PathPrefix
                    value: /
