kube/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
    name: loco-system
    labels:
        app.loco.io/name: loco
